bugfix etichetta pulsante sposta

--- a/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
+++ b/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
@@ -18,7 +18,7 @@
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-header">
-											<h4 class="modal-title" th:text="#{label.sposta}">Sposta data scadenza pagamento</h4>
+											<h4 class="modal-title" th:text="#{label.sposta_data_scadenza_pagamento}">Sposta data scadenza pagamento</h4>
 										</div>
 										<div class="modal-body">
 											<form id="form" method="post" th:action="@{/quotaAnnuale/scaduteENonPagate/confermaSposta}" >
