--- a/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
@@ -10,10 +10,11 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title x_menu">
-						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.id + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-primary pull-right" th:text="#{label.riassegna}"></a>
+							<form id="form" method="post" th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}">	
+							<label for="submitRiassegnaButton" class="btn btn-primary pull-right">Riassegna</label>	
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
+							</form>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -22,7 +23,6 @@
 			</div>
 		</div>
 		
-		<!-- Info dell'accreditamento -->
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -30,25 +30,29 @@
 						<h2 th:text="#{label.inFirma}"></h2>
 						<div class="clearfix"></div>
 					</div>
+					
+					
+				<!-- Info del accreditamento -->	
+				
 					<div class="x_content">
 						<table id="InfoAccreditamento" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" style="width: 100%">
-								<caption> <h4 style="color: #73879c;" th:text="#{label.infoAccreditamento}"></h4></caption>
+								<caption> <h4 style="color: #73879c;" th:text="#{label.info_accreditamento}"></h4></caption>
 								<thead>
 									<tr>
 										<th th:text="#{label.id}"></th>
 										<th th:text="#{label.tipo}"></th>
-										<th th:text="#{label.stato}"></th>
+										<th th:text="#{label.stato }"></th>
 										<th th:text="#{label.tipo_Wf}"></th>
 									</tr>
 								</thead>
 								<tbody th:remove="all-but-first">
-									<tr>
-										<td th:text="${accreditamentoWrapper.accreditamento.id}"></td>
-										<td th:text="${accreditamentoWrapper.accreditamento.tipoDomanda}"></td>
-										<td th:text="${accreditamentoWrapper.accreditamento.stato}"></td>
-										<td></td>
-										<!--<td th:text="${accreditamentoWrapper.accreditamento.}"></td> -->
-								</tr>
+							 	 <tr>
+									 <td th:text="${accreditamentoId}"></td>  	
+									 <td th:text="${accreditamento.tipoDomanda}"></td> 
+									 <td th:text="${accreditamento.stato}"></td> 
+									 <td th:text="${currentAccount}"></td>
+									<!--	<td th:text="${accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></td> -->
+								</tr> 
 							  </tbody>
 						</table>
 					</div>
@@ -67,51 +71,46 @@
 									</tr>
 								</thead>
 								<tbody th:remove="all-but-first">
-									<tr>
-										<td th:text="${accreditamentoWrapper.provider.id }"></td>
-										<td th:text="${accreditamentoWrapper.provider.denominazioneLegale}"></td>
-										<td th:text="${accreditamentoWrapper.provider.tipoOrganizzatore}"></td>
-										<td th:text="${accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></td> 
+							 	 <tr>
+									<td th:text="${accreditamento.provider.id }"></td>   
+								 	<td th:text="${accreditamento.provider.denominazioneLegale}"></td> 
+									<td th:text="${accreditamento.provider.tipoOrganizzatore}"></td>   
+									<td th:text="${accreditamento.provider.tipoOrganizzatore.gruppo}"></td> 
 								</tr>
 							  </tbody>
 						</table>
 					</div>
 					
-					<!-- Info della valutazione non storicizzata   -->
+					<!-- Info della valutazione non storicizzata (account attualmente presente)   -->
 					
-					<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.allAccountProfileSegreteria')} ? 'bad'">
-						<label class="control-label col-md-4 col-sm-4 col-xs-12" for="segreteria">
-							 <h5 style="color: #73879c;" th:text="#{label.account}"></h5>
-							<span class="required" th:if="${#sets.contains(accreditamentoWrapper.accreditamento.datiAccreditamento.procedureFormative, T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD)}"></span>
-						</label>
-						<br/>
-						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-							<select id="segreteria" class="selectpicker required"
-								th:field="${accreditamentoWrapper.allAccountProfileSegreteria}"
+					 <div class="x_content">
+					 <form id="selection" method='post' th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}"
+					 enctype="multipart/form-data">
+							 <h4 style="color: #73879c;" th:text="#{label.account}"></h4>
+								<select id="segreteria" class="selectpicker required"
 								data-width="100%"
 								data-style="btn-primary"
-								data-size="10" title="Seleziona il Profilo Segreteria...">
-								<option th:each="segreteria, row: ${accreditamentoWrapper.allAccountProfileSegreteria}"
+								data-size="10" th:attr="data-max-options=${valutazioneWrapper.accountSelected}" th:field="${valutazioneWrapper.accountSelected}">
+								<option th:each="segreteria, row: ${valutazioneWrapper.allAccountProfileSegreteria}"
 									th:value="${segreteria.id}" th:text="${segreteria.nome}">
 													</option>
 							</select>
-						</div>
-						<div th:if="${#fields.hasErrors('accreditamentoWrapper.allAccountProfileSegreteria')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.allAccountProfileSegreteria}"></div>
-					</div>
+							<input id="submitRiassegnaButton" class="btn btn-primary" name="submit1" type="submit" style="display: none;"/>
+							</form>
+					  </div>
 				</div>
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 
-			    $(document).ready(function() {
-
-					$('#segreteria').on('change', function(){
-					    var selected = $(this).find("option:selected").val();
-					    if(selected == -1) {
-							$(this).selectpicker('deselectAll');
-					    }
-					});
-
+			    $(document).ready(function() {	
+					var current = [[${currentAccount}]];
+					$("option").each(function(){
+				    	if($(this).text() == current){
+				    		$(this).attr('selected','selected');
+				            return;
+				    	}
+				    });		    			 
 			    });
 
 			/*]]>*/
