--- a/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoRiassegnaAccountValutazione.html
@@ -12,10 +12,8 @@
 					<div class="x_title x_menu">
 					<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamento.provider.denominazioneLegale + ' (' + accreditamento.provider.id + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamento.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<form id="form" method="post" th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}">	
-							<a data-toggle="modal" class="btn btn-primary pull-right" onclick="openModal()">Riassegna</a>
+							<a data-toggle="modal" class="btn btn-success pull-right" onclick="openModal()">Riassegna</a>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
-							</form>
 							<div class="modal fade" id="myModal">
 								<div class="modal-dialog">
 									<div class="modal-content">
@@ -47,96 +45,53 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.inFirma}"></h2>
+						<h2 th:text="#{label.riassegnaAccountValutazione}"></h2>
 						<div class="clearfix"></div>
 					</div>
 					
-					
-				<!-- Info del accreditamento -->	
-				
+					<!-- Info del accreditamento -->	
 					<div class="x_content">
-						<table id="InfoAccreditamento" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" style="width: 100%">
-								<caption> <h4 style="color: #73879c;" th:text="#{label.info_accreditamento}"></h4></caption>
+						<table id="InfoAccreditamento" class="table table-striped table-bordered dt-responsive nowrap" style="width: 100%">
+								<h4 th:text="#{label.info_accreditamento}"></h4>
 								<thead>
 									<tr>
 										<th th:text="#{label.id}"></th>
 										<th th:text="#{label.tipo}"></th>
 										<th th:text="#{label.stato }"></th>
 										<th th:text="#{label.tipo_Wf}"></th>
+										<th th:text="#{label.valutatore}"></th>
 									</tr>
 								</thead>
 								<tbody th:remove="all-but-first">
 							 	 <tr>
 									 <td th:text="${accreditamentoId}"></td>  	
-									 <td th:text="${accreditamento.tipoDomanda}"></td> 
-									 <td th:text="${accreditamento.stato}"></td> 
-									 <td th:text="${accreditamento.workflowInfoAccreditamento}"></td>
+									 <td th:text="${accreditamento.tipoDomanda.nome}"></td> 
+									 <td th:text="${accreditamento.stato.nome}"></td> 
+									 <td th:text="${accreditamento.workflowInCorso?.tipo}"></td>
+									 <td> 
+									 	<form id="selection" method='post' th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}" enctype="multipart/form-data">
+										 <select id="segreteria" class="selectpicker required"
+											data-width="100%"
+											data-style="btn-primary"
+											data-size="10" th:attr="data-max-options=${valutazioneWrapper.accountSelected}" th:field="${valutazioneWrapper.accountSelected}">
+												<option th:each="segreteria, row: ${valutazioneWrapper.allAccountProfileSegreteria}"
+													th:value="${segreteria.id}" th:text="${segreteria.fullName}">
+												</option>
+											</select>
+											<input id="submitRiassegnaButton" class="btn btn-primary" name="submitRiassegna" type="submit" style="display: none;"/>
+										</form>
+									</td>
 								</tr> 
 							  </tbody>
 						</table>
 					</div>
-					
-				<!-- Info del provider  -->
-					
-					<div class="x_content">
-						<table id="InfoAccreditamento" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" style="width: 100%">
-								<caption> <h4 style="color: #73879c;" th:text="#{label.info_provider}"></h4></caption>
-								<thead>
-									<tr>
-										<th th:text="#{label.id}"></th>
-										<th th:text="#{label.denominazioneLegale}"></th>
-										<th th:text="#{label.tipo_organizzatore}"></th>
-										<th th:text="#{label.gruppo}"></th>
-									</tr>
-								</thead>
-								<tbody th:remove="all-but-first">
-							 	 <tr>
-									<td th:text="${accreditamento.provider.id }"></td>   
-								 	<td th:text="${accreditamento.provider.denominazioneLegale}"></td> 
-									<td th:text="${accreditamento.provider.tipoOrganizzatore}"></td>   
-									<td th:text="${accreditamento.provider.tipoOrganizzatore.gruppo}"></td> 
-								</tr>
-							  </tbody>
-						</table>
-					</div>
-					
-					<!-- Info della valutazione non storicizzata (account attualmente presente)   -->
-					
-					 <div class="x_content">
-					 <form id="selection" method='post'  th:action="@{|/accreditamento/${valutazioneWrapper.accreditamentoId}/riassegnaAccountValutazione/riassegna|}"
-					 enctype="multipart/form-data">
-							 <h4 style="color: #73879c;" th:text="#{label.account}"></h4>
-								<select id="segreteria" class="selectpicker required"
-								data-width="100%"
-								data-style="btn-primary"
-								data-size="10" th:attr="data-max-options=${valutazioneWrapper.accountSelected}" th:field="${valutazioneWrapper.accountSelected}">
-								<option th:each="segreteria, row: ${valutazioneWrapper.allAccountProfileSegreteria}"
-									th:value="${segreteria.id}" th:text="${segreteria.nome}">
-													</option>
-							</select>
-							<input id="submitRiassegnaButton" class="btn btn-primary" name="submitRiassegna" type="submit" style="display: none;"/>
-							</form>
-					  </div>
 				</div>
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
-
-			    $(document).ready(function() {	
-					var current = [[${currentAccount}]];
-					$("option").each(function(){
-				    	if($(this).text() == current){
-				    		$(this).attr('selected','selected');
-				            return;
-				    	}
-				    });	
-
-			    });
 				function openModal(){
 					$('#myModal').modal('show');
-					
 				}
-
 			/*]]>*/
 			</script>
 		</div>
