--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -711,6 +711,32 @@
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaGruppo')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.tipologiaGruppo')}__}"></div>
 								</div>
+
+								<!-- Tipologia di Sperimentazione (attivo se tipologiaEventoFSC=ATTIVITA_DI_RICERCA) -->
+								<div class="item form-group tipologiaSperimentazione" style="display: none;" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaSperimentazione')} ? 'bad'">
+									<div class="col-xs-1"></div>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<span th:text="#{label.eventofsc_tipologiaSperimentazione}"></span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<select id="tipologiaSperimentazione"
+											class="selectpicker"
+											th:field="${eventoWrapper.evento.tipologiaSperimentazione}"
+											data-width="100%" data-style="btn-primary"
+											data-actions-box="true" data-size="10"
+												data-hide-disabled="false" th:disabled="${isRiedizione or isEditSemiBloccato}"
+											title="Seleziona una tipologia di sperimentazione...">
+											<option
+												th:each="tipologia, row: ${T(it.tredi.ecm.dao.enumlist.TipologiaSperimentazioneFSCEnum).values()}"
+												th:value="${tipologia}"
+												th:text="${tipologia.nome}">
+											</option>
+										</select>
+									</div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaSperimentazione')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.tipologiaSperimentazione')}__}"></div>
+								</div>
+
 								<!-- Sperimentazione clinica (attivo se tipologiaEventoFSC=ATTIVITA_DI_RICERCA) -->
 								<div class="item form-group sperimentazioneClinica" style="display: none;" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sperimentazioneClinica')} ? 'bad'">
 									<div class="col-xs-1"></div>
@@ -751,10 +777,33 @@
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.ottenutoComitatoEtico')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.ottenutoComitatoEtico')}__}"></div>
 								</div>
 
-								<!-- RESPONSABILI -->
-								<div class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad'">
+								<!-- RESPONSABILI/ESPERTI/COORDINATORI versione evento = 2 AND non "Attività di ricerca"-->
+								<div id="resp_esp_coord_intesta" class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad'">
 									<label class="control-label col-xs-1">
 										<span>17</span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="responsabili">
+										<span th:text="#{label.responsabili_scientifici_esperti_coordinatori}">Responsabili scientifici / Esperti / Coordinatori</span>
+										<span class="required">*</span>
+									</label>
+								</div>
+
+								<!-- RESPONSABILI/ESPERTI/COORDINATORI/INVESTIGATORI versione evento = 2 AND "Attività di ricerca"-->
+								<div id="resp_esp_coord_invest_intesta" class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad'">
+									<label class="control-label col-xs-1">
+										<span>17</span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="responsabili">
+										<span th:text="#{label.responsabili_scientifici_esperti_coordinatori_investigatori}">Responsabili scientifici / Esperti / Coordinatori / Investigatori</span>
+										<span class="required">*</span>
+									</label>
+								</div>
+
+								<!-- RESPONSABILI versione evento = 1 e 2 -->
+								<div class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad'">
+									<label class="control-label col-xs-1">
+										<!-- il numero viene mostrato in versione evento = 1 -->
+										<span id="resp_sci_num_campo">17</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="responsabili">
 										<span th:text="#{label.responsabili_scientifici}">Responsabili scientifici</span>
@@ -764,8 +813,65 @@
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.responsabili')}__}"></div>
 									<div class="item form-group" style="clear:both; padding:2px;"></div>
 									<div class="item form-group" style="clear:both">
-										<div class="col-xs-offset-1 col-xs-10">
+										<div id="responsabiliScientificiContainer" class="col-xs-offset-1 col-xs-10">
 											<th:block th:include="evento/eventoEdit :: responsabiliScientifici" />
+										</div>
+									</div>
+								</div>
+
+								<!-- ESPERTI -->
+								<div id="esperti_block" class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.esperti')} ? 'bad'">
+									<label class="control-label col-xs-1">
+										<span></span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="esperti">
+										<span th:text="#{label.esperti}">Esperti</span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"></div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.esperti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.esperti')}__}"></div>
+									<div class="item form-group" style="clear:both; padding:2px;"></div>
+									<div class="item form-group" style="clear:both">
+										<div id="espertiContainer" class="col-xs-offset-1 col-xs-10">
+											<th:block th:include="evento/eventoEdit :: esperti" />
+										</div>
+									</div>
+								</div>
+
+								<!-- COORDINATORI -->
+								<div id="coordinatori_block" class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.coordinatori')} ? 'bad'">
+									<label class="control-label col-xs-1">
+										<span></span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="coordinatori">
+										<span th:text="#{label.coordinatori}">Coordinatori</span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"></div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.coordinatori')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.coordinatori')}__}"></div>
+									<div class="item form-group" style="clear:both; padding:2px;"></div>
+									<div class="item form-group" style="clear:both">
+										<div id="coordinatoriContainer" class="col-xs-offset-1 col-xs-10">
+											<th:block th:include="evento/eventoEdit :: coordinatori" />
+										</div>
+									</div>
+								</div>
+
+								<!-- INVESTIGATORI -->
+								<div id="investigatori_block" class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.investigatori')} ? 'bad'">
+									<label class="control-label col-xs-1">
+										<span></span>
+									</label>
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="investigatori">
+										<span th:text="#{label.investigatori}">Investigatori</span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"></div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.investigatori')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.investigatori')}__}"></div>
+									<div class="item form-group" style="clear:both; padding:2px;"></div>
+									<div class="item form-group" style="clear:both">
+										<div id="investigatoriContainer" class="col-xs-offset-1 col-xs-10">
+											<th:block th:include="evento/eventoEdit :: investigatori" />
 										</div>
 									</div>
 								</div>
@@ -1055,7 +1161,7 @@
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabileSegreteria')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.responsabileSegreteria')}__}"></div>
 									<div class="item form-group" style="clear:both; padding:2px;"></div>
 									<div class="item form-group" style="clear:both">
-										<div class="col-xs-offset-1 col-xs-10">
+										<div id="responsabileSegreteriaContainer" class="col-xs-offset-1 col-xs-10">
 											<th:block th:include="evento/eventoEdit :: responsabileSegreteria" />
 										</div>
 									</div>
@@ -1456,15 +1562,29 @@
 					$('#tipologiaEventoId').on('change', setEvResSperimentazioneClinica);
 					$('#tipologiaEventoId').on('change', setEvResOttenutoComitatoEtico);
 					$('#tipologiaEventoId').on('change', setEvResIndicatoreObbligatorio);
+					$('#tipologiaEventoId').on('change', setEvResTipologiaSperimentazione);
+					$('#tipologiaEventoId').on('change', setEspertiCoordinatori);
+					
+					//modifica dataInizio
+					$('#dataInizio').on("apply.daterangepicker change", function() {
+						setEvResTipologiaSperimentazione();
+						reInitDataTableById('responsabiliScientifici');
+						setEspertiCoordinatori();
+					});
+					$('#dataInizio').on('change', setEvResTipologiaSperimentazione);
+					$('#dataInizio').on('change', reInitDataTableById('responsabiliScientifici'));
+					$('#dataInizio').on('change', setEspertiCoordinatori);
 
 					//non funziona
 					//$('#sperimentazioneClinicaSiId, #sperimentazioneClinicaNoId').on('change', setEvResOttenutoComitatoEtico);
 					$(".sperimentazioneClinica").on("ifChecked", setEvResOttenutoComitatoEtico);
 
+					setEspertiCoordinatori();
 					setEvResTipologiaGruppo();
 					setEvResSperimentazioneClinica();
 					setEvResOttenutoComitatoEtico();
 					setEvResIndicatoreObbligatorio();
+					setEvResTipologiaSperimentazione();
 					$(".fasiDaInserire").on("ifChecked", function(){
 						reloadSection('tab2');
 					});
@@ -1481,6 +1601,17 @@
 
 					//init per provincia e comune della sede
 					initProvinciaComune('provincia', 'comune');
+					
+					//var versione = getVersione();
+					//if(isFsc() && versione === 2) {
+					//if(versione === 2) {
+						//var val = $('#tipologiaEventoId').selectpicker('val');
+						reInitDataTableById('esperti');
+						reInitDataTableById('coordinatori');
+						//if (val === 'ATTIVITA_DI_RICERCA') {
+							reInitDataTableById('investigatori');
+						//}
+					//}
 				}
 
 
@@ -1507,6 +1638,50 @@
 					}
 				}
 
+				function setEspertiCoordinatori() {
+					var val = $('#tipologiaEventoId').selectpicker('val');
+					var versione = getVersione();
+					if (versione === 2) {
+						if (val === 'ATTIVITA_DI_RICERCA') {
+							$("#resp_esp_coord_invest_intesta").show();
+							$("#resp_esp_coord_intesta").hide();
+							$("#investigatori_block").show();							
+						} else {
+							$("#resp_esp_coord_intesta").show();
+							$("#resp_esp_coord_invest_intesta").hide();
+							$("#investigatori_block").hide();							
+						}
+						
+						$("#resp_sci_num_campo").hide();
+						$("#esperti_block").show();
+						$("#coordinatori_block").show();
+					} else {
+						$("#resp_esp_coord_invest_intesta").hide();
+						$("#resp_esp_coord_intesta").hide();
+						$("#resp_sci_num_campo").show();
+						$("#esperti_block").hide();
+						$("#coordinatori_block").hide();
+						$("#investigatori_block").hide();
+					}
+				}
+
+				function setEvResTipologiaSperimentazione() {
+					//console.log($('#tipologiaEventoId').val());
+					var val = $('#tipologiaEventoId').selectpicker('val');
+					//alert(tipEvVal)
+					var versione = getVersione();
+					if (versione === 2 && val === 'ATTIVITA_DI_RICERCA') {
+						//alert('mostro')
+						$(".tipologiaSperimentazione").slideDown("slow");
+					} else {
+						//alert('hide')
+						$(".tipologiaSperimentazione").slideUp("slow");
+						//resetto il valore
+						$("#tipologiaSperimentazione").selectpicker('deselectAll');
+						$("#tipologiaSperimentazione").selectpicker('refresh');
+					}
+				}
+
 				function setEvResSperimentazioneClinica() {
 					//console.log($('#tipologiaEventoId').val());
 					var val = $('#tipologiaEventoId').selectpicker('val');
@@ -1526,12 +1701,9 @@
 				function setEvResOttenutoComitatoEtico() {
 					//console.log($('#tipologiaEventoId').val());
 					var val = $('#tipologiaEventoId').selectpicker('val');
-					//alert($('#sperimentazioneClinicaSiId').is(':checked'))
 					if (val === 'ATTIVITA_DI_RICERCA' && $('#sperimentazioneClinicaSiId').is(':checked')) {
-						//alert('mostro')
 						$(".ottenutoComitatoEtico").slideDown("slow");
 					} else {
-						//alert('hide')
 						$(".ottenutoComitatoEtico").slideUp("slow");
 						//resetto il valore
 						//$("#sperimentazioneClinica").selectpicker('deselectAll');
@@ -1542,10 +1714,8 @@
 					//console.log($('#tipologiaEventoId').val());
 					var val = $('#tipologiaEventoId').selectpicker('val');
 					if (val === 'PROGETTI_DI_MIGLIORAMENTO') {
-						//alert('mostro')
 						$(".indicatoreObbligatorio").show();
 					} else {
-						//alert('hide')
 						$(".indicatoreObbligatorio").hide();
 					}
 				}
@@ -1611,6 +1781,9 @@
 					}
 				}; */
 
+				var ruoliRespScient = [[${eventoWrapper.getListRuoloFSCEnumPerResponsabiliScientifici()}]];
+				var ruoliEsperti = [[${eventoWrapper.getListRuoloFSCEnumPerEsperti()}]];
+				var ruoliCoordinatori = [[${eventoWrapper.getListRuoloFSCEnumPerCoordinatori()}]];
 
 				function updateRuoliCoinvolti(){
 					var tipologiaEvento = $('#tipologiaEventoId').selectpicker('val');
@@ -1619,22 +1792,63 @@
 						var start = [[@{/listaRuoliCoinvolti?tipologiaEvento=}]];
 						var end = tipologiaEvento;
 						var url = start + end;
+						var versione = getVersione();
 
 						$(selectId).selectpicker('val','');
 						$(selectId).prop('disabled',false);
 
 						$.get(url, function(data){
-
+							//console.log('-----------------------');
+							//console.log(data);
+							//console.log('-----------------------');
 							$.each($(selectId + " option"), function() {
 								$(this).hide();
 							});
 
 							for(var item = 0; item < data.length; item++){
 								$.each($(selectId + " option"), function() {
-									if($(this).attr("value") == data[item])
-										$(this).show();
+									//console.log($(this).attr("value"));
+									//se evento versione 2 non ablito gli esperti
+									if(versione === 1 || ($(this).attr("value") != 'ESPERTO_A' && $(this).attr("value") != 'ESPERTO_B' && $(this).attr("value") != 'ESPERTO_C')) {
+										if($(this).attr("value") == data[item])
+											$(this).show();
+									}
 								});
 							}
+							
+							if (versione === 2) {
+								//devo integrare il dato con gli eventuali RESPONSABILE_SCIENTIFICO_X
+								$.each(ruoliRespScient, function() {
+									//console.log('ruoliRespScient: ' + $(this).attr("$name"));
+									var parent = this;
+									$.each($(selectId + " option"), function() {
+										//console.log($(this).attr("value"));
+										if($(this).attr("value") == $(parent).attr("$name"))
+											$(this).show();
+									});
+								});
+								//devo integrare il dato con gli eventuali ESPERTI_X
+								$.each(ruoliEsperti, function() {
+									//console.log('ruoliEsperti: ' + $(this).attr("$name"));
+									var parent = this;
+									$.each($(selectId + " option"), function() {
+										//console.log($(this).attr("value"));
+										if($(this).attr("value") == $(parent).attr("$name"))
+											$(this).show();
+									});
+								});
+								//devo integrare il dato con gli eventuali COORDINATORI_X
+								$.each(ruoliCoordinatori, function() {
+									//console.log('ruoliCoordinatori: ' + $(this).attr("$name"));
+									var parent = this;
+									$.each($(selectId + " option"), function() {
+										//console.log($(this).attr("value"));
+										if($(this).attr("value") == $(parent).attr("$name"))
+											$(this).show();
+									});
+								});
+								
+							} 
 
 							$(selectId).selectpicker('refresh');
 						});
@@ -1732,8 +1946,6 @@
 				function removeAttivitaFrom(target,caller){
 					var rowIndex = $(caller).closest("tr").data('row-id');
 					var removeAttivitaFrom = $(caller).closest("div.div-fase-id").data('fase-id');
-					console.log("parent() di parent()" + removeAttivitaFrom);
-					console.log("parents()" + $(caller).parents().data('fase-id'));
 					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeAttivitaFrom/|}]] + target + "/" + removeAttivitaFrom + "/" + rowIndex;
 
 					$("#" + target).load(url, function() {
@@ -1800,6 +2012,16 @@
 					initAllCommon();
 					switch (sectionIndex) {
 					case '1': 	reInitDataTableById('responsabiliScientifici');
+								//var versione = getVersione();
+								//if(isFsc() && versione === 2) {
+								//if(versione === 2) {
+								//	var val = $('#tipologiaEventoId').selectpicker('val');
+									reInitDataTableById('esperti');
+									reInitDataTableById('coordinatori');
+									//if (val === 'ATTIVITA_DI_RICERCA') {
+										reInitDataTableById('investigatori');
+									//}
+								//}
 								break;
 					case '2':  	reInitDataTableByClass('datatable-responsive-programmaFSC');
 								break;
