Fixed the first bug, from Ã— to x

--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -98,7 +98,7 @@
 						<div class="modal-dialog modal-lg">
 							<div class="modal-content">
 								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">Ã—</span>
+									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">x</span>
 									</button>
 									<h4 class="modal-title" id="myModalLabel" th:text="#{label.seleziona_anno}">Seleziona anno</h4>
 								</div>
