Fixed datatable-responsive-eventi-provider rendering in Firefox
Firefox quantom was not reading the styles or classes added in
the td of the table.
Seperated style in a class, added in main.css, and added that class
to td using aoColumnDefs.
max:width: 200px;
word-wrap: word-break;

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1510,3 +1510,8 @@ table.dataTable tbody tr.selected {
 .modal-body{
 	min-height: 150px;
 }
+
+.wordwrap-200{
+	max-width:200px !important;  
+	word-wrap:break-word !important;
+}
