--- a/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
+++ b/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
@@ -63,7 +63,7 @@
 										<td th:text="${quotaAnnuale.provider.id}"></td>
 										<td th:text="${quotaAnnuale.provider.denominazioneLegale}"></td>
 										<td th:text="${quotaAnnuale.pagamento.dataScadenzaPagamento}"></td>
-										<td th:text="${#numbers.formatDecimal(quotaAnnuale.pagamento.importo,3,2,'POINT')}"></td>
+										<td th:text="${#numbers.formatDecimal(quotaAnnuale.pagamento.importo, 0, 2,'POINT')}"></td>
 									</tr>
 								</tbody>
 							</table>
